--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ before_script:
   - RAILS_ENV=test bundle exec rake db:create db:schema:load
 script:
   - bundle exec rspec
+
+env:
+  - RAILS_VERSION=3.2.22.2
+  - RAILS_VERSION=4.0.13
